Mon Oct 18 11:42:28 2004  Steve Huston  <shuston@riverace.com>

	* config/openssl.mpb: Added automake to the set of targets that
	  get lit_libs and includes adjusted.

Mon Oct 18 08:09:59 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/ProjectCreator.pm:

          Changed the defaulting behavior for Template_Files.  If a template
          file resulted from generation, it used to always be added (like
          source files).  Now, it will only be added if Template_Files is
          not supplied (defaulted).

Thu Oct  7 16:44:29 2004  Steve Huston  <shuston@riverace.com>

        * modules/AutomakeWorkspaceCreator.pm: Changed the library relocator
          adjustment so it doesn't add the $top_builddir relativity to
          libraries being built in the same directory. This allows the
          automake/make dependencies to work correctly and have things
          built in the right order.

Thu Oct  7 13:06:54 2004  Chad Elliott  <elliott_c@ociweb.com>

        * modules/EM3ProjectCreator.pm:
        * modules/NMakeProjectCreator.pm:
        * modules/VC6ProjectCreator.pm:
        * modules/VC7ProjectCreator.pm:
        * modules/WinVersionTranslator.pm:
        * templates/em3vcp.mpd:
        * templates/nmake.mpd:
        * templates/vc6dsp.mpd:
        * templates/vc7.mpd:

          Added a windows version translator to deal with versions that
          contain letters and multiple decimal points.  See the comment in
          WinVersionTranslator for more details.

Thu Oct  7 13:03:28 2004  Steve Huston  <shuston@riverace.com>

        * modules/AutomakeWorkspaceCreator.pm: Fixed the library location
          adjuster to adjust more than one library on a line.

Wed Oct  6 11:35:48 2004  Chad Elliott  <elliott_c@ociweb.com>

        * clone_build_tree.pl:

          Added a description of what this script does to the usage.

        * modules/GHSProjectCreator.pm:
        * modules/GHSWorkspaceCreator.pm:
        * templates/ghs.mpd: